images and text changes

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 
     <!-- Header -->
     <header class="masthead d-flex">
-      <div class="container text-center my-auto">
-        <h1 class="mb-1">Hola!</h1>
-        <h1 class="mb-1">My name is Felipe Quiros</h1>
+      <div class="container text-center my-auto" style="color:#80DCFF">
+        <h1 class="mb-1" style="color:#CCFFFF">خوش آمد</h1>
+        <h1 class="mb-1">I am Felipe Quiros</h1>
         <h3 class="mb-5">
-          <em>I'm Full-Stack Software Developer</em>
+          <em>I'm Full-Stack Software Developer and an Audio Engineer</em>
         </h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about"
           >More About Me</a
@@ -85,20 +85,25 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>107 facts about me, a few you my care</h2>
+            <h2>whoami</h2>
             <p class="lead mb-1">
-              I'm a creative software engineer.
+              I am a full-stack software engineer passionate about code, technology, and understanding how things work. My background
+              as an audio engineer has allowed me to solidify my understanding of the logic that underlies the engineering field and
+              had led me to think of coding as the ultimate puzzle and a modern expression of art.
               <!-- <a href="https://unsplash.com/">Unsplash</a>! -->
             </p>
+            </br>
             <p class="lead mb-1">
-              I possess a creative mindset.
+            I consider myself a creative individual and a goal-oriented team player who strongly believes effective communication
+            and respect are key to the success of any enterprise. 
             </p>
-            <p class="lead mb-1">
-              I ship quality code.
-            </p>
+          
             <p class="lead mb-5">
-              I have strong pair-programming skills.
+              My favorite languages are JavaScript, Python, and Spanish.
             </p>
+            <!-- <p class="lead mb-5">
+              I have strong pair-programming skills.
+            </p> -->
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services"
               >My Skills</a
             >
@@ -115,7 +120,7 @@
       <div class="container">
         <div class="content-section-heading">
           <h3 class="text-secondary mb-0">Skills</h3>
-          <h2 class="mb-5">Technologies I Master</h2>
+          <h2 class="mb-5">Technologies I Use</h2>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -153,7 +158,7 @@
               Start Bootstrap!
             </p> -->
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <!-- <i class="icon-mustache"></i> -->
               <i class="devicon-postgresql-plain"></i>
@@ -163,7 +168,9 @@
             </h4>
             <p class="text-faded mb-0">I mustache you a question...</p> -->
           </div>
-          <div class="col-lg-3 col-md-6">
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="devicon-react-original"></i>
             </span>
@@ -172,7 +179,7 @@
             </h4>
             <p class="text-faded mb-0">I mustache you a question...</p> -->
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="devicon-css3-plain"></i>
             </span>
@@ -181,7 +188,7 @@
             </h4>
             <p class="text-faded mb-0">I mustache you a question...</p> -->
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="devicon-html5-plain"></i>
             </span>
@@ -190,7 +197,7 @@
             </h4>
             <p class="text-faded mb-0">I mustache you a question...</p> -->
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="devicon-docker-plain"></i>
             </span>
@@ -200,12 +207,34 @@
             <p class="text-faded mb-0">I mustache you a question...</p> -->
           </div>
         </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+            <i class="devicon-mongodb-plain"></i>
+            </span>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="devicon-github-plain"></i>
+            </span>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="devicon-express-original"></i>
+            </span>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="devicon-heroku-original"></i>
+            </span>
+          </div>
+        </div>
       </div>
     </section>
 
     <!-- Callout -->
     <section class="callout">
-      <div class="container text-center">
+      <div class="container text-center" style="color:#CCFFFF">
         <h2 class="mx-auto mb-5">
           Have a look at
           <em>my</em>
@@ -228,12 +257,12 @@
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#!">
+            <a class="portfolio-item" href="http://rockinhood.herokuapp.com/">
               <div class="caption">
                 <div class="caption-content">
                   <div class="h2">Rockinhood</div>
                   <p class="mb-0">
-                    A full-stack application that allows users to securely buy
+                    Full-stack application that allows users to securely buy
                     and sell company’s stocks.
                   </p>
                 </div>
@@ -242,12 +271,12 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#!">
+            <a class="portfolio-item" href="https://intro-music-store.herokuapp.com/">
               <div class="caption">
                 <div class="caption-content">
                   <div class="h2">Intro</div>
                   <p class="mb-0">
-                    A lite and minimalist e-commerce music app that allows for a
+                    Lite and minimalist e-commerce music app that allows for a
                     full shopping experience.
                   </p>
                 </div>
@@ -256,12 +285,12 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#!">
+            <a class="portfolio-item" href="https://woofrapp.herokuapp.com/">
               <div class="caption">
                 <div class="caption-content">
-                  <div class="h2">Third project</div>
+                  <div class="h2">Woofr</div>
                   <p class="mb-0">
-                    Descrition of my third project!
+                    Compact app to share and comment photos of cute puppies.
                   </p>
                 </div>
               </div>
@@ -269,35 +298,33 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#!">
+            <a class="portfolio-item" href="https://branayoga.herokuapp.com/">
               <div class="caption">
                 <div class="caption-content">
-                  <div class="h2">Fourth project</div>
+                  <div class="h2">BranaYoga</div>
                   <p class="mb-0">
-                    Descritpion of my fourth project!
+                    Full-featured role-based yoga blog organized by self-contained categories and tags.
                   </p>
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio-4.jpg" alt="" />
             </a>
           </div>
-        </div>
+        <!-- </div> -->
       </div>
     </section>
 
     <!-- Call to Action -->
-    <section class="content-section bg-primary text-white">
+    <section class="content-section bg-primary text-white" id="contact">
       <div class="container text-center">
         <h2 class="mb-4">
-          Use the buttons below to get in touch with me...
+          Get in touch with me!
         </h2>
-        <a href="tel:+1-678-200-3495" class="btn btn-xl btn-light mr-4"
-          >Call me!</a
-        >
+        <a href="tel:+1-678-200-3495" class="btn btn-xl btn-light mr-4">Call</a>
         <a
           href="https://mail.google.com/mail/?view=cm&fs=1&to=quirosfelipe@gmail.com&su=SUBJECT&body=BODY"
           class="btn btn-xl btn-dark"
-          >Email me!</a
+          >Email</a
         >
       </div>
     </section>
@@ -336,7 +363,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white" href="#!">
+            <a class="social-link rounded-circle text-white" href="https://angel.co/u/felipe-quiros">
               <!-- <i class="icon-social-twitter"></i> -->
               <img
                 src="https://img.icons8.com/ios-filled/50/000000/angelist.png"
