--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     <!-- Header -->
     <header class="masthead d-flex">
       <div class="container text-center my-auto" style="color:#80DCFF">
-        <h1 class="mb-1" style="color:#CCFFFF">خوش آمد</h1>
-        <h1 class="mb-1">I am Felipe Quiros</h1>
+        <h1 class="mb-1" style="color:#CCFFFF">Hola,</h1>
+        <h1 class="mb-1">I'm Felipe Quiros</h1>
         <h3 class="mb-5">
-          <em>I'm Full-Stack Software Developer and an Audio Engineer</em>
+          <em>I am Full-Stack Software Developer and an Audio Engineer</em>
         </h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about"
           >More About Me</a
