--- a/index.html
+++ b/index.html
@@ -87,10 +87,9 @@
           <div class="col-lg-10 mx-auto">
             <h2>whoami</h2>
             <p class="lead mb-1">
-              I am a full-stack software engineer passionate about code, technology, and understanding how things work. My background
+              Passionate about code, innovation, and finding out how things work; my background
               as an audio engineer has allowed me to solidify my understanding of the logic that underlies the engineering field and
               had led me to think of coding as the ultimate puzzle and a modern expression of art.
-              <!-- <a href="https://unsplash.com/">Unsplash</a>! -->
             </p>
             </br>
             <p class="lead mb-1">
