photos and  colors fixed

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 
     <!-- Header -->
     <header class="masthead d-flex">
-      <div class="container text-center my-auto" style="color:#80DCFF">
+      <div class="container text-center my-auto" style="color:#00A3AD">
         <h1 class="mb-1" style="color:#CCFFFF">Hola,</h1>
         <h1 class="mb-1">I'm Felipe Quiros</h1>
-        <h3 class="mb-5">
+        <h3 class="mb-5" style="color:#445252">
           <em>I am Full-Stack Software Developer and an Audio Engineer</em>
         </h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about"
@@ -233,7 +233,7 @@
 
     <!-- Callout -->
     <section class="callout">
-      <div class="container text-center" style="color:#CCFFFF">
+      <div class="container text-center" style="color:#445252">
         <h2 class="mx-auto mb-5">
           Have a look at
           <em>my</em>
