--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Felipe Quiros Portfolio" />
+    <meta property="og:type" content="Website" />
+    <meta name="author" content="Felipe Quiros" />
+    <meta name="description" property="og:description" content="Felipe Quiros Portfolio. Full-Stack Web Developer." />
+    <meta name="image" property="og:image" content="https://i.postimg.cc/FFcqjy2x/Screen-Shot-2020-08-10-at-6-15-24-PM.png" />
+    
 
     <title>Felipe Quiros Portfolio</title>
 
