--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="Felipe Quiros Portfolio" />
+    <meta name="description" content="Felipe Quiros portfolio. Full-Stack Software Developer and Audio Engineer" />
     <meta property="og:type" content="Website" />
     <meta name="author" content="Felipe Quiros" />
-    <meta name="description" property="og:description" content="Felipe Quiros Portfolio. Full-Stack Web Developer." />
+    <meta name="description" property="og:description" content="Felipe Quiros portfolio. Full-Stack Software Developer and Audio Engineer" />
     <meta name="image" property="og:image" content="https://i.postimg.cc/FFcqjy2x/Screen-Shot-2020-08-10-at-6-15-24-PM.png" />
     
 
@@ -75,7 +75,7 @@
         <h1 class="mb-1" style="color:#CCFFFF">Hola,</h1>
         <h1 class="mb-1">I'm Felipe Quiros</h1>
         <h3 class="mb-5" style="color:#445252">
-          <em>I am Full-Stack Software Developer and an Audio Engineer</em>
+          <em>I am a Full-Stack Software Developer and an Audio Engineer</em>
         </h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about"
           >More About Me</a
