--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
     <!-- Custom CSS -->
     <link href="css/stylish-portfolio.min.css" rel="stylesheet" />
     <!-- Fav icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <script src="https://use.fontawesome.com/5b526be4a0.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png"> 
+    <link rel="manifest" href="icon/site.webmanifest"> 
+
+   
   </head>
 
   <body id="page-top">
@@ -406,5 +407,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/stylish-portfolio.min.js"></script>
+    <script src="https://use.fontawesome.com/5b526be4a0.js"></script>
   </body>
+  
 </html>
