--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 </a>
               </div>
                 <div class="col-lg-6">
-                  <a class="portfolio-item" href="https://branayoga.herokuapp.com/">
+                  <a class="portfolio-item" href="https://branayoga-app.herokuapp.com/">
                     <div class="caption">
                       <div class="caption-content">
                         <div class="h2">BranaYoga</div>
@@ -314,7 +314,7 @@
           </div>
       
           <div class="col-lg-6">
-            <a class="portfolio-item" href="https://woofrapp.herokuapp.com/">
+            <a class="portfolio-item" href="https://woofr-app.herokuapp.com/">
               <div class="caption">
                 <div class="caption-content">
                   <div class="h2">Woofr</div>
