--- a/index.html
+++ b/index.html
@@ -100,16 +100,17 @@
           <div class="col-lg-10 mx-auto">
             <h2>whoami</h2>
             <p class="lead mb-1">
-              Passionate about code, innovation, and finding out how things work; my background
-              as an audio engineer has allowed me to solidify my understanding of the logic that underlies the engineering field and
-              had led me to think of coding as the ultimate puzzle and a modern expression of art.
+            Passionate about code, innovation, and finding out how things work; as a long-time engineer working in the audio field I
+            have found fascination for the plethora of different software tools that have crossed my path thriving me to learn the
+            underlying technologies that make this possible and leading me to often think of coding as the ultimate puzzle and a
+            modern expression of art.
             </p>
             </br>
             <p class="lead mb-1">
             I consider myself a creative individual and a goal-oriented team player who strongly believes effective communication
             and respect are key to the success of any enterprise. 
             </p>
-          
+          </br>
             <p class="lead mb-5">
               My favorite languages are JavaScript, Python, and Spanish.
             </p>
@@ -339,7 +340,7 @@
         </h2>
         <a href="tel:+1-678-200-3495" class="btn btn-xl btn-light mr-4">Call</a>
         <a
-          href="https://mail.google.com/mail/?view=cm&fs=1&to=quirosfelipe@gmail.com&su=SUBJECT&body=BODY"
+          href="https://mail.google.com/mail/?view=cm&fs=1&to=feldevcode@gmail.com&su=SUBJECT&body=BODY"
           class="btn btn-xl btn-dark"
           >Email</a
         >
